--- a/output.css
+++ b/output.css
@@ -1045,6 +1045,11 @@ video {
     margin: 2.5rem;
   }
 
+  .sm\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
   .sm\:mt-0 {
     margin-top: 0px;
   }
